Edit profile page and minor bug fix
- Implement add product page
- New window once clicked on a product
- Navigation bar on home page: removed exta URL
- Rename variable to match with backend (product.title -> product.product.name)
- Show owner shop name in product detail page
- Backend code refactoring

--- a/app/static/css/dark_site.css
+++ b/app/static/css/dark_site.css
@@ -171,11 +171,11 @@
     margin-right: 5px;
 }
 
-.dark_mode a {
+.dark_mode a:not([class*="no-color"]) {
     color: #fff;
 }
 
-    .dark_mode a:hover {
+    .dark_mode a:not([class*="no-color"]):hover {
         color: #ccc;
     }
 
