--- a/app/templates/product/display_card.html
+++ b/app/templates/product/display_card.html
@@ -4,7 +4,7 @@
         <div class="card-body">
             <h5 class="d-flex justify-content-start ms-2" style="max-width: 80%;">
                 <span class="text-truncate">
-                    {{ product.title }}
+                    {{ product.product_name }}
                 </span>
             </h5>
             <div class="d-flex justify-content-start">
