include blueprint and setup
 Use blueprints for organizing routes, especially authentication-related ones, which helps in managing larger applications.

--- a/app/templates/layout/page_not_found.html
+++ b/app/templates/layout/page_not_found.html
@@ -8,7 +8,7 @@
         <p class="lead text-gray-800 mb-5">Page Not Found</p>
         <p class="text-gray-500 mb-0">Oops! It seems you've encountered a glitch in the matrix...</p>
         <p>But don't worry, our team of agents is working to fix it.</p>
-        <a href="{{ url_for('home') }}">← Back to Home Page</a>
+        <a href="{{ url_for('main.home') }}">← Back to Home Page</a>
     </div>
     <br/><br/>
 {% endblock %}
