--- a/app/templates/layout/nav_bar.html
+++ b/app/templates/layout/nav_bar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container bg-gradient-dark topbar topbar-dark">
-        <a class="logo topbar-brand d-flex align-items-center justify-content-center" href="{{ url_for('home') }}">
+        <a class="logo topbar-brand d-flex align-items-center justify-content-center" href="{{ url_for('main.home') }}">
             <i class="fa-solid fa-leaf fa-2p5x company-logo"></i>
             <div class="mx-3">{{ company }}</div>
             <i id="weather_mode" class="fa-solid fa-sun"></i>
@@ -13,7 +13,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 {% if not current_user.is_anonymous %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('product') }}">
+                        <a class="nav-link" href="{{ url_for('main.product') }}">
                             <i class="fa-solid fa-earth-oceania"></i> Explore
                         </a>
                     </li>
@@ -43,7 +43,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 {% if (not current_user.is_anonymous) and current_user.is_seller %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('seller') }}">
+                        <a class="nav-link" href="{{ url_for('main.seller') }}">
                             <i class="fa-solid fa-diagram-predecessor"></i> Products
                         </a>
                     </li>
@@ -59,9 +59,9 @@
                             <i class="fa-solid fa-user"></i> {{current_user.username}}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="{{ url_for('profile') }}">Profile</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('main.profile') }}">Profile</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('main.logout') }}">Logout</a></li>
                         </ul>
                     </li>
                 {% else %}
@@ -70,8 +70,8 @@
                         <i class="fa-solid fa-user"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="{{ url_for('login') }}">Login</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('signup') }}">Sign Up</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.login') }}">Login</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.signup') }}">Sign Up</a></li>
                     </ul>
                 </li>
                 {% endif %}
