--- a/app/templates/seller/product_table.html
+++ b/app/templates/seller/product_table.html
@@ -58,7 +58,7 @@
                                     <td>{{ pro.condition }}</td>
                                     <td>
                                         <div class="action-container">
-                                            <button class="edit ms-2" title="Edit"><span><a class="no-color" href="{{ url_for('edit_product', id=pro.id) }}"><i class="fa-lg fa-solid fa-pen-to-square"></i></a></span></button>
+                                            <button class="edit ms-2" title="Edit"><span><a class="no-color" href="{{ url_for('main.edit_product', id=pro.id) }}"><i class="fa-lg fa-solid fa-pen-to-square"></i></a></span></button>
                                             <button class="delete ms-2" title="Delete" onclick="deleteProdcut({{pro.id}})"><span><i class="fa-lg fa-solid fa-trash-can"></i></span></button>
                                         </div>
                                     </td>
@@ -79,7 +79,7 @@
                                 <ul id="ProductPageNavBar" class="pagination">
                                     <li class="page-item {% if not prev_url %} disabled{% endif %}"><a class="page-link" href="{{prev_url}}">Previous</a></li>
                                     {% for page in pages %}
-                                        <li class="page-item"><a class="page-link" href="{{ url_for('seller', page=page) }}">{{ page }}</a></li>
+                                        <li class="page-item"><a class="page-link" href="{{ url_for('main.seller', page=page) }}">{{ page }}</a></li>
                                     {% endfor %}
                                     <li class="page-item {% if not next_url %} disabled{% endif %}"><a class="page-link" href="{{next_url}}">Next</a></li>
                                 </ul>
