elastic search implementation for Product Model
- implement elastic search on Product Model
- bug fix and init app
- UI improvement

--- a/app/static/css/site.css
+++ b/app/static/css/site.css
@@ -608,3 +608,10 @@ tr[data-status='Cancelled'] td,
 td[data-status=white] {
     color: #fff;
 }
+
+a.border-thick {
+  border-width: 3px !important;
+}
+a.border-thick + a.border-thick {
+  border-top: 0 !important;
+}
