Fixed bug on profile page
I have fixed what Lok noticed from the profile page as well as minor changes on "Post Code"
- Display shop name on the user profile page
- Implement validation for the term and condition radio button
- Update account type display to accurately reflect sellers as both "Seller" and "Buyer"
- Change "Post Code" to "Postcode"

--- a/app/templates/users/profile.html
+++ b/app/templates/users/profile.html
@@ -52,8 +52,17 @@
                                 {{ form.account_type(class="form-control", disabled=True) }}
                               </div>
                             </div>
+                            {% set form = account_form %}
+                            {% if form.become_seller.data %}
+                                <div class="col-12">
+                                    {{ form.shop_name.label(class="form-label") }}
+                                    {{ form.shop_name(class="form-control mb-3", disabled=True) }}
+                                    {% for error in form.shop_name.errors %}
+                                        <span class="text-danger">{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
                             <div class="col-12">
-                                {% set form = account_form %}
                                 {% if form.errors %}
                                     <div id="account_AlertModalDiv">
                                         {% set divId = '#account_AlertModalDiv' %}
@@ -70,16 +79,28 @@
                                 {% set class = "" %}
                                 {% if show %} {% set class = "show" %} {% endif %}
                                 <div class="collapse {{class}}" id="sellerForm">
+                                    {% if not form.become_seller.data %}
+                                        <div class="mb-3">
+                                            {{ form.shop_name.label(class="form-label") }}
+                                            {{ form.shop_name(class="form-control mb-3") }}
+                                            {% for error in form.shop_name.errors %}
+                                                <span class="text-danger">{{ error }}</span>
+                                            {% endfor %}
+                                        </div>
+                                    {% endif %}
                                     <div class="mb-3">
-                                        <label for="exampleCheckboxFormPassword" class="form-label">Confirm Your Password:</label>
+                                        {{ form.confirm_password.label(for="exampleCheckboxFormPassword", class="form-label") }}
                                         {{ form.confirm_password(type="password", class="form-control mb-3", id="exampleCheckboxFormPassword", placeholder="Your Password") }}
+                                        {% for error in form.confirm_password.errors %}
+                                            <span class="text-danger">{{ error }}</span>
+                                        {% endfor %}
                                     </div>
                                     <div class="mb-3">
                                         <div class="form-check form-check-reverse">
-                                            <input type="radio" class="form-check-input" id="sellerAgreement">
-                                            <label class="form-check-label" for="sellerAgreement">
-                                                I agree to the terms and conditions.
-                                            </label>
+                                            {% for subfield in form.agree_to_terms %}
+                                                {{ subfield(class="form-check-input",id="sellerAgreement", novalidate='asdsad') }}
+                                            {% endfor %}
+                                            {{ form.agree_to_terms.label(class="form-check-label", for="sellerAgreement") }}
                                         </div>
                                     </div>
                                     {{ form.submit(class="btn btn-primary", id="confirmSellerBtn") }}
