filtering with product full functionality.
- improve category page to jinja2 format and add pagination
- link categories page with nav_bar and home page
- code refactoring
- add helper and fields files
- ui and js minor changes

--- a/app/static/css/dark_site.css
+++ b/app/static/css/dark_site.css
@@ -465,7 +465,7 @@
 }
 
 .dark_mode .bg-success{
-    background-color: #8aff8a !important; 
+    background-color: #00a200 !important; 
 }
 
 .dark_mode #swipeSupport{
