--- a/app/templates/home/categories.html
+++ b/app/templates/home/categories.html
@@ -2,37 +2,37 @@
   <h2 class="text-center mb-4 mt-3">Shop range of products</h2>
   <div class="row justify-content-center">
     <div class="col-lg-2 col-md-4 col-sm-6 col-12 mb-4 category-body">
-      <div class="category text-center border rounded p-3" onclick="location.href='#'" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
+      <div class="category text-center border rounded p-3" data-id="{{ url_for('main.filter_products', page=1, filters={'categories':['Clothing & Accessories']}) }}" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
         <i class="fas fa-tshirt fa-3x mb-3"></i>
         <p class="font-weight-bold">Clothing & Accessories</p>
       </div>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-6 col-12 mb-4 category-body">
-      <div class="category text-center border rounded p-3" onclick="location.href='#'" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
+      <div class="category text-center border rounded p-3" data-id="{{ url_for('main.filter_products', page=1, filters={'categories':['Home & Garden']}) }}" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
         <i class="fas fa-home fa-3x mb-3"></i>
         <p class="font-weight-bold">Home & Garden</p>
       </div>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-6 col-12 mb-4 category-body">
-      <div class="category text-center border rounded p-3" onclick="location.href='#'" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
+      <div class="category text-center border rounded p-3" data-id="{{ url_for('main.filter_products', page=1, filters={'categories':['Electronics']}) }}" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
         <i class="fas fa-desktop fa-3x mb-3"></i>
         <p class="font-weight-bold">Electronics</p>
       </div>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-6 col-12 mb-4 category-body">
-      <div class="category text-center border rounded p-3" onclick="location.href='#'" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
+      <div class="category text-center border rounded p-3" data-id="{{ url_for('main.filter_products', page=1, filters={'categories':['Books & Media']}) }}" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
         <i class="fas fa-book fa-3x mb-3"></i>
         <p class="font-weight-bold">Books & Media</p>
       </div>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-6 col-12 mb-4 category-body">
-      <div class="category text-center border rounded p-3" onclick="location.href='#'" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
+      <div class="category text-center border rounded p-3" data-id="{{ url_for('main.filter_products', page=1, filters={'categories':['Sport & Leisure']}) }}" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
         <i class="fas fa-futbol fa-3x mb-3"></i>
         <p class="font-weight-bold">Sport & Leisure</p>
       </div>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-6 col-12 mb-4 category-body">
-      <div class="category text-center border rounded p-3" onclick="location.href='#'" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
+      <div class="category text-center border rounded p-3" data-id="{{ url_for('main.filter_products', page=1, filters={'categories':['Others']}) }}" onmouseover="this.classList.add('bg-success')" onmouseout="this.classList.remove('bg-success')">
         <i class="fas fa-ellipsis fa-3x mb-3"></i>
         <p class="font-weight-bold">Others</p>
       </div>
