--- a/app/templates/layout/nav_bar.html
+++ b/app/templates/layout/nav_bar.html
@@ -18,17 +18,17 @@
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-icons"></i> Categories
                         </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Clothing & Accessories</a></li>
-                            <li><a class="dropdown-item" href="#">Home & Garden</a></li>
-                            <li><a class="dropdown-item" href="#">Electronics</a></li>
-                            <li><a class="dropdown-item" href="#">Books & Media</a></li>
-                            <li><a class="dropdown-item" href="#">Sports & Leisure</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('main.filter_products', page=1, filters={'categories':['Clothing & Accessories']}) }}">Clothing & Accessories</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('main.filter_products', page=1, filters={'categories':['Home & Garden']}) }}">Home & Garden</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('main.filter_products', page=1, filters={'categories':['Electronics']}) }}">Electronics</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('main.filter_products', page=1, filters={'categories':['Books & Media']}) }}">Books & Media</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('main.filter_products', page=1, filters={'categories':['Sport & Leisure']}) }}">Sport & Leisure</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Others</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('main.filter_products', page=1, filters={'categories':['Others']}) }}">Others</a></li>
                           </ul>
                         </ul>
                     </li>
