--- a/app/templates/product/display_list.html
+++ b/app/templates/product/display_list.html
@@ -1,22 +1,23 @@
-<a href="#" class="list-group-item list-group-item-action border-thick">
+<a href="#" data-id="{{ product.id }}" class="list-group-item list-group-item-action border-thick">
     <div class="row">
         <div class="d-flex">
             <div class="col-3">
                 <img src='/static/img/product_image/image.jpg' alt="{{ product.product_name }}" class="rounded">
             </div>
             <div class="ms-3 col-9">
-                <h2 class="text-truncate product-title">{{ product.product_name }} </h2>
                 <div class="d-flex justify-content-between me-2">
-                    <div class="justify-content-start">
-                        <p class="card-text">AUD {{ product.price }}</p>
-                    </div>
-                    <div class="justify-content-end">
-                        <span class="d-flex justify-content-start mb-2">Qty: {{ product.quantity }}</span>
+                    <h2 class="text-truncate product-title col-9">{{ product.product_name }} </h2>
+                    <div class="d-flex flex-column text-truncate">
+                        <span class=" text-truncate"><i class="fa-solid fa-shop me-1 mb-2"></i>{{ product.owner.shop_name }}</span>
                         <span><i class="fa-solid fa-location-dot me-1"></i>{{ product.location }}</span>
                     </div>
                 </div>
+                <div class="d-flex justify-content-between me-2">
+                    <p class="card-text m-0">AUD {{ product.price }}</p>
+                    <span class="mt-3">Qty: {{ product.quantity }}</span>
+                </div>
                 <hr>
-                <p class="multi-line-text-truncate">{{ product.description }}</p>
+                <p class="multi-line-text-truncate m-0">{{ product.description }}</p>
             </div>
         </div>
     </div>
