--- a/app/templates/product/filter_bar.html
+++ b/app/templates/product/filter_bar.html
@@ -1,94 +1,83 @@
 <!-- Filter bar Horizontal -->
-<div id="productFilterBar" class="d-xl-none col-12 d-flex align-content-start flex-wrap">
-    <div>
+<div id="productFilterDropdownBar" class="d-xl-none col-12">
+  <form method="POST" class="row mb-4" action="{{ url_for('main.filter_products', view=view) }}">
+    {{ form.hidden_tag() }}
+    <div class="col-3">
+      <h5>Categories</h5>
       <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle mb-3" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-secondary dropdown-toggle w-100" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
           Categories
         </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <!-- Filter options here -->
-          <li><a class="dropdown-item" href="#">Category 1</a></li>
-          <li><a class="dropdown-item" href="#">Category 2</a></li>
-          <!-- Add more filter options as needed -->
-        </ul>
+        <div class="dropdown-menu w-100" aria-labelledby="dropdownMenu">
+          {% for choice in form.categories %}
+            <div class="form-check">
+              {{ choice(class="form-check-input") }}
+              {{ choice.label(class="form-check-label") }}
+            </div>
+          {% endfor %}
+        </div>
       </div>
     </div>
-    <div class="ms-2">
+    <div class="col-3">
+      <h5>Conditions</h5>
       <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle mb-3" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-          Price
+        <button class="btn btn-secondary dropdown-toggle w-100" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+          Conditions
         </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <!-- Filter options here -->
-          <li><a class="dropdown-item" href="#">Price 1</a></li>
-          <li><a class="dropdown-item" href="#">Price 2</a></li>
-          <!-- Add more filter options as needed -->
-        </ul>
+        <div class="dropdown-menu w-100" aria-labelledby="dropdownMenu">
+          {% for choice in form.conditions %}
+            <div class="form-check">
+              {{ choice(class="form-check-input") }}
+              {{ choice.label(class="form-check-label") }}
+            </div>
+          {% endfor %}
+        </div>
       </div>
     </div>
-    <div class="ms-2">
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle mb-3" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-          Condition
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <!-- Filter options here -->
-          <li><a class="dropdown-item" href="#">Condition 1</a></li>
-          <li><a class="dropdown-item" href="#">Condition 2</a></li>
-          <!-- Add more filter options as needed -->
-        </ul>
-      </div>
+    <div class="col-3">
+      <h5>Price</h5>
+      <select name="price" class="form-select">
+        {% for choice in form.price %} {{choice}} {% endfor %}
+      </select>
+    </div>
+    <div class="col-3 d-flex align-items-end">
+      {{ form.submit(class="btn btn-primary") }}
+    </div>
+  </form>
+</div>
+
+<!-- Filter bar Vertical -->
+<div id="productFilterBar" class="d-none d-xl-block col-2">
+  <div class="card">
+    <div class="card-body">
+      <form method="POST" action="{{ url_for('main.filter_products', view=view) }}">
+        {{ form.hidden_tag() }}
+        <div class="mb-3">
+          <h5 class="card-title">Categories</h5>
+          {% for choice in form.categories %}
+          <div class="form-check">
+            {{ choice(class="form-check-input") }}
+            {{ choice.label(class="form-check-label") }}
+          </div>
+          {% endfor %}
+        </div>
+        <div class="mb-3">
+          <h5 class="card-title">Conditions</h5>
+          {% for choice in form.conditions %}
+          <div class="form-check">
+            {{ choice(class="form-check-input") }}
+            {{ choice.label(class="form-check-label") }}
+          </div>
+          {% endfor %}
+        </div>
+        <div class="mb-3">
+          <h5 class="card-title">Price</h5>
+          <select name="price" class="form-select">
+            {% for choice in form.price %} {{choice}} {% endfor %}
+          </select>
+        </div>
+        {{ form.submit(class="btn btn-primary") }}
+      </form>
     </div>
   </div>
-  
-  <!-- Filter bar Vertical -->
-  <div id="productFilterBar" class="d-none d-xl-block col-2">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Categories</h5>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="category1">
-          <label class="form-check-label" for="category1">
-            Category 1
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="category2">
-          <label class="form-check-label" for="category2">
-            Category 2
-          </label>
-        </div>
-        <!-- Add more categories as needed -->
-        
-        <h5 class="card-title mt-3">Price</h5>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="price1">
-          <label class="form-check-label" for="price1">
-            Price 1
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="price2">
-          <label class="form-check-label" for="price2">
-            Price 2
-          </label>
-        </div>
-        <!-- Add more price ranges as needed -->
-  
-        <h5 class="card-title mt-3">Condition</h5>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="condition1">
-          <label class="form-check-label" for="condition1">
-            Condition 1
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="condition2">
-          <label class="form-check-label" for="condition2">
-            Condition 2
-          </label>
-        </div>
-        <!-- Add more conditions as needed -->
-      </div>
-    </div>
-  </div>
+</div>
