image update logic and minor bug fix.

--- a/app/templates/manage_product/edit.html
+++ b/app/templates/manage_product/edit.html
@@ -10,6 +10,9 @@
     
         {% include "/manage_product/edit_product.html" %}
     </div>
+    <script>    
+        const images = "{{ images }}";
+    </script>
 {% endblock %}
 
 {% block javascript %}
