adding product images into FE pages.

--- a/app/templates/product/display_list.html
+++ b/app/templates/product/display_list.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="d-flex">
             <div class="col-3">
-                <img src='/static/img/product_image/image.jpg' alt="{{ product.product_name }}" class="rounded">
+                <img src='{{ product.img }}' alt="{{ product.product_name }}" class="rounded">
             </div>
             <div class="ms-3 col-9">
                 <div class="d-flex justify-content-between me-2">
