--- a/app/templates/seller/product_table_child.html
+++ b/app/templates/seller/product_table_child.html
@@ -58,7 +58,7 @@
                             <div class="text-xs font-weight-bold text-secondary text-uppercase mb-1">Preview Product</div>
                             <div class="preview-img">
                                 {% for img in pro.imgs %}
-                                    <img class="rounded" src=/static/img/{{ img }}>
+                                    <img class="rounded" src="{{ img }}">
                                 {% endfor %}
                             </div>                    
                         </div>                    
